# skltn

./: .PRD.md  .PROGRESS.md  .env.local  .gitignore  CLAUDE.md  Cargo.toml  OPTIMISATIONS_V2.md  PRD.md  PROGRESS.md  README.md  install.sh  justfile
.github/workflows/: release.yml
crates/skltn/: Cargo.toml
crates/skltn-cli/: Cargo.toml
crates/skltn-core/: Cargo.toml
crates/skltn-mcp/: Cargo.toml
crates/skltn-mcp/examples/: smoke_test.rs
crates/skltn-mcp/src/: budget.rs  cache.rs  error.rs  lib.rs  main.rs  resolve.rs  savings.rs  session.rs
crates/skltn-mcp/src/tools/: list_repo_structure.rs  mod.rs  read_full_symbol.rs  read_skeleton.rs  restore_session.rs
crates/skltn-mcp/tests/: budget_test.rs  list_repo_structure_test.rs  manifest_test.rs  mcp_integration_test.rs  path_security_test.rs  read_full_symbol_test.rs  read_skeleton_test.rs  resolve_test.rs  restore_session_test.rs  session_test.rs
crates/skltn-obs/: .gitignore  Cargo.toml
crates/skltn-obs/dashboard/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
crates/skltn-obs/dashboard/src/: App.css  App.tsx  main.tsx
crates/skltn-obs/dashboard/src/components/: CacheRing.tsx  ConnectionStatus.tsx  ExplorationHero.tsx  MetricsBar.tsx  ModelBreakdown.tsx  RequestTable.tsx  SavingsRing.tsx  TokenChart.tsx
crates/skltn-obs/dashboard/src/hooks/: useChartData.ts  useObsWebSocket.ts  useSessionMetrics.ts
crates/skltn-obs/dashboard/src/types/: usage.ts
crates/skltn-obs/src/: dashboard.rs  drilldown.rs  lib.rs  main.rs  pricing.rs  proxy.rs  savings.rs  skim.rs  tracker.rs  ws.rs
crates/skltn-obs/tests/: pricing_test.rs  proxy_nonstreaming_test.rs  proxy_streaming_test.rs  tracker_test.rs  ws_test.rs
crates/skltn/src/: main.rs  pid.rs  skeletonize.rs  start.rs  status.rs  stop.rs
fixtures/javascript/: arrow_functions.js  class_with_methods.js  decorators.js  es_module_exports.js  simple_function.js
fixtures/python/: class_with_methods.py  decorators.py  deeply_nested.py  (+5 more)
(+85 files in other folders)
