[package]
name = "skltn-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "skltn_mcp"
path = "src/lib.rs"

[[bin]]
name = "skltn-mcp"
path = "src/main.rs"

[dependencies]
skltn-core = { path = "../skltn-core" }
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tiktoken-rs = "0.6"
tree-sitter = "0.24"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

[dev-dependencies]
insta = "1"
tempfile = "3"
