[package]
name = "skltn-obs"
version = "0.1.0"
edition = "2021"

[lib]
name = "skltn_obs"
path = "src/lib.rs"

[[bin]]
name = "skltn-obs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
futures = "0.3"
http = "1"
http-body-util = "0.1"
regex = "1"
url = "2"
tokio-stream = "0.1"
dirs = "6"

[dev-dependencies]
tokio-tungstenite = "0.26"
tempfile = "3"
