[package]
name = "skltn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skltn"
path = "src/main.rs"

[dependencies]
skltn-core = { path = "../skltn-core" }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
is-terminal = "0.4"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"
